Added a comment to see console for output

--- a/rusty-life-wasm/index.html
+++ b/rusty-life-wasm/index.html
@@ -16,5 +16,6 @@
   <body>
     <h1>Rusty Life</h1>
     <p>A WebAssembly implementation of Conway's Game of Life written in Rust</p>
+    <p>See console for results</p>
   </body>
 </html>
